// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostMenuActionsContent - Snapshots > matches snapshot for all menu items visible (other user post) 1`] = `
<div
  class="group p-0"
  data-disabled="false"
  data-testid="dropdown-menu-item"
>
  <div
    data-class-name="flex items-center gap-2 p-0 overflow-hidden"
    data-override-defaults="true"
    data-testid="container"
  >
    <span
      class="size-4 shrink-0 transition-colors text-muted-foreground group-hover:text-foreground"
    >
      Icon
    </span>
    <span
      class="truncate text-base font-medium transition-colors text-muted-foreground group-hover:text-foreground"
      data-as="span"
      data-testid="typography"
    >
      Follow Test User
    </span>
  </div>
</div>
`;

exports[`PostMenuActionsContent - Snapshots > matches snapshot for mobile sheet variant 1`] = `
<button
  class="justify-start overflow-hidden"
  data-testid="menu-button"
>
  <div
    data-class-name="flex items-center gap-2 overflow-hidden"
    data-override-defaults="true"
    data-testid="container"
  >
    <span
      class="size-4 shrink-0 text-muted-foreground"
    >
      Icon
    </span>
    <span
      class="truncate text-base font-medium text-muted-foreground"
      data-as="span"
      data-testid="typography"
    >
      Follow Test User
    </span>
  </div>
</button>
`;

exports[`PostMenuActionsContent - Snapshots > matches snapshot for own post menu items 1`] = `
<div
  class="group p-0"
  data-disabled="false"
  data-testid="dropdown-menu-item"
>
  <div
    data-class-name="flex items-center gap-2 p-0 overflow-hidden"
    data-override-defaults="true"
    data-testid="container"
  >
    <span
      class="size-4 shrink-0 transition-colors text-muted-foreground group-hover:text-foreground"
    >
      Icon
    </span>
    <span
      class="truncate text-base font-medium transition-colors text-muted-foreground group-hover:text-foreground"
      data-as="span"
      data-testid="typography"
    >
      Copy pubky
    </span>
  </div>
</div>
`;
